--- a/RFP222testProgram/RFP222testProgram.csproj
+++ b/RFP222testProgram/RFP222testProgram.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculator.cs" />
+    <Compile Include="DayOfWeek.cs" />
     <Compile Include="Humans.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
